--- a/demo-2/views/index.html
+++ b/demo-2/views/index.html
@@ -94,7 +94,7 @@
 	 //   	}, false);
 
 
-		var socket = io.connect('http://localhost');
+		var socket = io.connect('http://107.21.207.8:8090/');
 		  socket.on('news', function (data) {
 		    console.log(data);
 		    socket.emit('my other event', { my: 'data' });
