--- a/demo-2/views/index.html
+++ b/demo-2/views/index.html
@@ -26,6 +26,9 @@
       	   var typeIdChangeListener;
       	   var thePanorama;
       	   var streetviewChangeListener;
+      	   var streetviewViewListener;
+      	   var isStreetViewInitialized;
+
 	      function initialize() {
 	        var mapOptions = {
 	          center: new google.maps.LatLng(-34.397, 150.644),
@@ -41,176 +44,281 @@
 	          <!-- google maps events -->
 	  		  <!-- zoom -->
 	  		    google.maps.event.addListener(map, 'idle', function() {
-			  	 // worker.postMessage({'cmd': 'dragend'});
-
 			  	 emitEvents();
- 				// socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: thePanorama.getVisible() });
-			  	 //socket.emit('my other event', { my: 'dragend' });
-
-				    
 			  });
 
-	  		//  streetviewChangeListener =  google.maps.event.addListener(thePanorama, 'visible_changed', function() {
-	  		//   	console.log('streetview changed');
-	  		//   	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
-	  		//     emitEvents();
-				 // // socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: thePanorama.getVisible() });
-							  
-
-		   //   });
-
-		     streetviewChangeListener = google.maps.event.addListener(thePanorama, 'zoom_changed', function() {
-	  		  	console.log('zoom_changed ');
-	  		  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
-	  		    emitEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
-				 // socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: thePanorama.getVisible() });
-							  
-
-		     });
-
-		   //   google.maps.event.addListener(thePanorama, 'visible_changed', function() {
-	  		//   	console.log('visible_changed ');
-	  		//   	// console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
-	  		//   	if (!thePanorama.getVisible()){
-	  		//   		emitEvents();
-	  		//   	} else {
-	  		//   		return;
-	  		//   	}
-	  		    
-				 // // socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: thePanorama.getVisible() });
-							  
-
-		   //   });
-
-
-	  		  typeIdChangeListener =  google.maps.event.addListener(map, 'maptypeid_changed', function() {
-	  		   	console.log('maptypeid_changed');
-			  	 // worker.postMessage({'cmd': 'dragend'});
- 
-			  	 //socket.emit('my other event', { my: 'dragend' });
-
-				    
-			  });
-
-			   
-
-			 
-
-	  		    
 	  		
+
+	  		  addStreetViewCloseListener();
+	  		  addStreetViewListener();
+	  		  // addStreetViewPanoListener();
+
+		     // streetviewChangeListener = google.maps.event.addListener(thePanorama, 'visible_changed', function() {
+	  		  // 	console.log('visible_changed: ' + thePanorama.getVisible());
+	  		  // 	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		  // 	if (thePanorama.getVisible()) {
+	  		  //    console.log('calling emitEvents');
+
+	  		  //  	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+	  		  //  	}
+		     // });
+
+		     // google.maps.event.addListener(thePanorama, 'pano_changed', function() {
+	  		  // 	console.log('pano_changed: ' + thePanorama.getVisible());
+	  		  // 	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		  // 	if (thePanorama.getVisible()) {
+	  		  //    console.log('calling emitEvents');
+	  		  //  	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+	  		  //  	}
+		     // });
+			
+			// var self = this;
+
+		    // streetviewChangeListener = google.maps.event.addListener(thePanorama, 'zoom_changed', function() {
+	  		 //  	console.log('zoom_changed ');
+	  		 //  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		 //    emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+	  		 //    isStreetViewInitialized  = true;
+		    //  });
+
+
+		     //   google.maps.event.addListener(thePanorama, 'position_changed', function() {
+	  		  // 	console.log('position_changed position: ' + thePanorama.getPosition() + " zoom: " + thePanorama.getZoom());
+	  		  //   emitEvents({position: thePanorama.getPosition(), zoom: thePanorama.getZoom()});
+		     // });
+
+
+		     // streetviewViewListener = google.maps.event.addListener(thePanorama, 'visible_changed', function() {
+	  		  // 	console.log('view_changed ');
+	  		  // 	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		  // 	console.log(' panorama visibility :' + thePanorama.getVisible());
+	  		  // 	// if (!thePanorama.getVisible()) {
+	  		  // 		emitEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+	  		  // 	// }
+	  		  // 		  		  	// if (thePanorama.getVisible()){
+	  		  // 	// 	console.log('the panorama is visible');
+	  		  // 	// } 
+	  		  //   // emitEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+		     // });
+
+	  		 typeIdChangeListener =  google.maps.event.addListener(map, 'maptypeid_changed', function() {
+	  		   	console.log('maptypeid_changed');
+	  		   	emitEvents();
+			  });
+
+	      } //end initialize
+
+	      function emitEvents(){
+	      	socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId()});
 	      }
 
-	      function emitEvents(data){
-	      	console.log(' streetview visibility value::' + thePanorama.getVisible());
+	      function emitStreetViewEvents(data){
+
+	      	console.log('emitStreetViewEvents: ' + JSON.stringify(data));
+	        console.log(' streetview visibility value::' + thePanorama.getVisible());
 	      	var streetviewVisibility = false;
 	      	streetviewVisibility = thePanorama.getVisible();
-	      	socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: streetviewVisibility, panoramaData: data});
+
+	      	socket.emit('streetview_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: streetviewVisibility, panoramaData: data});
+
 	      }
+
 	      google.maps.event.addDomListener(window, 'load', initialize);
 
-		// <!-- initialize the webworker --> 
-	 //    var worker = new Worker('../js/doWork.js');
 
-	 //    <!-- listener for callbacks from worker -->
-	 //    worker.addEventListener('message', function(e) {
-	 //    	console.log('worker message: ' + e.data);
-	 //   	}, false);
-
-
-		var socket = io.connect('http://107.21.207.8:8090/');
-		// var socket = io.connect('http://localhost');
-		  socket.on('news', function (data) {
-		    console.log(data);
-		    socket.emit('my other event', { my: 'data' });
-		  });
-
+		// var socket = io.connect('http://107.21.207.8:8090/');
+		var socket = io.connect('http://localhost');
+		  
+		// map events
 		   socket.on('map_event', function (data) {
 		    console.log("map_event received: " + JSON.stringify(data));
-		   map.setCenter(new google.maps.LatLng(data.lat, data.lng));
-		   map.setZoom(data.zoom);
-		   google.maps.event.removeListener(streetviewChangeListener);
-		   //check if showing streetview currently?
-		   if (data.panoramaData!=undefined){
+		  	map.setCenter(new google.maps.LatLng(data.lat, data.lng));
+		  	map.setZoom(data.zoom);
+		  	//remove the typechangelistener 
+		    google.maps.event.removeListener(typeIdChangeListener);
 
 
-			   if (data.streetview) {
-			   		if (thePanorama.getVisible()){
-			   			return;
-			   		}
-			   		console.log('show streetview')
-			   		console.log('panorama position lat ' + data.panoramaData.position.jb + ' lng: ' + data.panoramaData.position.kb );
-			   		thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.jb, data.panoramaData.position.kb ));
+			map.setMapTypeId(data.type);
 
-			   		thePanorama.setZoom(data.panoramaData.zoom);
-			   		map.setStreetView(thePanorama);
-			   		thePanorama.setVisible(true);
-			   } else {
-			   		console.log('hide streetview');
-			   	    thePanorama.setVisible(false);
-			   	    map.setStreetView(thePanorama);
-			   }
-			} else {
-				if (!data.streetview) {
-			   		console.log('hide streetview');
-			   	    thePanorama.setVisible(false);
-			   	    map.setStreetView(thePanorama);
-			   	}
-			}
-
-		   google.maps.event.removeListener(typeIdChangeListener);
-
-		   map.setMapTypeId(data.type);
-
-	
-		  // google.maps.event.addListener(streetviewChangeListener);
-		  // google.maps.event.addListener(typeIdChangeListener);
-
-		   streetviewChangeListener =  google.maps.event.addListener(thePanorama, 'zoom_changed', function() {
-	  		  	console.log('zoom_changed changed position: ' + thePanorama.getPosition() + " zoom: " + thePanorama.getZoom());
-	  		    // emitEvents();
-	  		    emitEvents({position: thePanorama.getPosition(), zoom: thePanorama.getZoom()});
-
-				 // socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: thePanorama.getVisible() });
-							  
-
-		     });
-
-		  typeIdChangeListener =   google.maps.event.addListener(map, 'maptypeid_changed', function() {
+			//add it back
+			typeIdChangeListener =   google.maps.event.addListener(map, 'maptypeid_changed', function() {
 	  		   	console.log('maptypeid_changed');
-			  	 // worker.postMessage({'cmd': 'dragend'});
 			  	 emitEvents();
-			  	 // socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: thePanorama.getVisible() });
+			 });
 
-			  	 //socket.emit('my other event', { my: 'dragend' });
+		   });
 
-				    
-			  });
-		    // socket.emit('my other event', { my: 'data' });
-		  });
+		  //streetview events
+		   socket.on('streetview_event', function(data){
+		   	// console.log('received streetview_event: ' + JSON.stringify(data));
+		   	// google.maps.event.removeListener(streetviewChangeListener);
+		   	removeStreetViewPositionListener();
+		    // if (streetviewViewListener!=undefined)
+		    // google.maps.event.removeListener(streetviewViewListener);
+
+		    if (data.streetview){
+		    	console.log('streetview value is true');
+		    	if (data.panoramaData) {
+
+		    		console.log('panoramaData exists');
+		    		if (data.panoramaData.position){
+		    			console.log('position value exists');
+
+		    			if (!thePanorama.getVisible()){
+		    				console.log('panorama is not already showing');
+		    				console.log(' position lat: ' + data.panoramaData.position.jb  + " lng: " + data.panoramaData.position.kb);
+					    	thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.jb, data.panoramaData.position.kb ));
+							thePanorama.setZoom(1);
+							map.setStreetView(thePanorama);
+					   		thePanorama.setVisible(true);
+					   	} else {
+					   		console.log('panorama is already showing');
+					   		thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.jb, data.panoramaData.position.kb ));
+					   	}
+				   	}
+		   		}
+		    } else {
+		    	console.log('streetview value is not true');
+		    	thePanorama.setVisible(false);
+		    }
+
+		 //   //check if showing streetview currently?
+		 //   if (data.panoramaData!=undefined){
+
+
+			//    if (data.streetview) {
+			//    		if (thePanorama.getVisible() ){
+			//    			return;
+			//    		}
+			//    		console.log('show streetview')
+			//    		if (data.panoramaData.position!=undefined) {
+			//    			console.log('panorama position lat ' + data.panoramaData.position.jb + ' lng: ' + data.panoramaData.position.kb );
+			// 	   		thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.jb, data.panoramaData.position.kb ));
+			// 	   		thePanorama.setZoom(1);
+			// 	   		map.setStreetView(thePanorama);
+			// 	   		thePanorama.setVisible(true);
+			// 	   	}
+			//    } else {
+			//    		console.log('hide streetview data is false');
+			//    	    thePanorama.setVisible(false);
+			//    	    // map.setStreetView(null);
+			//    }
+			// } else {
+			// 	if (!data.streetview) {
+			//    		console.log('hide streetview since panoramaData is undefined');
+			//    	    thePanorama.setVisible(false);
+			//    	    // map.setStreetView(null);
+			//    	}
+			// }
+
+			setTimeout(addStreetViewPositionListener, 1000);
+
+
+		   // streetviewChangeListener =  google.maps.event.addListener(thePanorama, 'visible_changed', function() {
+	  		//   	console.log('visible_changed position: ' + thePanorama.getPosition() + " zoom: " + thePanorama.getZoom());
+	  		//     emitStreetViewEvents({position: thePanorama.getPosition(), zoom: thePanorama.getZoom()});
+		   //   });
+
+		    // streetviewViewListener = google.maps.event.addListener(thePanorama, 'visible_changed', function() {
+	  		 //  	console.log('view_changed ');
+	  		 //  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		 //  	console.log(' panorama visibility :' + thePanorama.getVisible());
+	  		 //  	emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+		    //  });
+
+
+		   // google.maps.event.addListener(thePanorama, 'position_changed', function() {
+	  		//   	console.log('position_changed position: ' + thePanorama.getPosition() + " zoom: " + thePanorama.getZoom());
+	  		//     emitEvents({position: thePanorama.getPosition(), zoom: thePanorama.getZoom()});
+		   //   });
+
+
+		  // streetviewViewListener = google.maps.event.addListener(thePanorama, 'visible_changed', function() {
+	  	// 	  	console.log('view_changed ');
+	  	// 	  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  	// 	  	console.log(' panorama visibility :' + thePanorama.getVisible());
+	  	// 	  	// if (!thePanorama.getVisible()) {
+	  	// 	  		emitEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+	  	// 	  	// }
+	  	// 	  		  		  	// if (thePanorama.getVisible()){
+	  	// 	  	// 	console.log('the panorama is visible');
+	  	// 	  	// } 
+	  	// 	    // emitEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+		  //    });
+
+
+
+		   
+		  // socket.emit('my other event', { my: 'data' });
+
+		   });
+		
+		  function addStreetViewListener() {
+		  	streetviewChangeListener = google.maps.event.addListener(thePanorama, 'visible_changed', function() {
+	  		  	console.log('visible_changed: ' + thePanorama.getVisible());
+	  		  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		  	if (thePanorama.getVisible()) {
+	  		     console.log('calling emitEvents');
+	  		     setTimeout(
+	  		   	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()}), 5000);
+	  		   	}
+		     })
+
+		  }
+
+		   function addStreetViewPanoListener() {
+		  	streetviewChangeListener = google.maps.event.addListener(thePanorama, 'pano_changed', function() {
+	  		  	console.log('pano_changed: ' + thePanorama.getVisible());
+	  		  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		  	if (thePanorama.getVisible()) {
+	  		     console.log('calling emitEvents');
+	  		     setTimeout(
+	  		   	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()}), 5000);
+	  		   	}
+		     })
+
+		  }
+
+		   function addStreetViewPositionListener() {
+		  	streetviewChangeListener = google.maps.event.addListener(thePanorama, 'position_changed', function() {
+	  		  	console.log('position_changed: ' + thePanorama.getVisible());
+	  		  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+	  		  	if (thePanorama.getVisible()) {
+	  		     console.log('calling emitEvents');
+	  		     setTimeout(
+	  		   	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()}), 5000);
+	  		   	}
+		     })
+
+		  }
+
+		  function removeStreetViewPositionListener(){
+		  	google.maps.event.removeListener(streetviewChangeListener);
+		  }
+
+		  function addStreetViewCloseListener(){
+		  	  google.maps.event.addListener(thePanorama, 'closeclick', function() {
+	  		  	console.log('closeclick');
+	  		  	thePanorama.setVisible(false);
+	  		  	// streetviewChangeListener = google.maps.event.addListener(thePanorama, 'visible_changed', function() {
+		  		  // 	console.log('visible_changed: ' + thePanorama.getVisible());
+		  		  // 	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
+		  		  // 	if (thePanorama.getVisible()) {
+		  		  //    console.log('calling emitEvents');
+		  		  //  	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom()});
+		  		  //  	}
+		     	// });
+	  		  	emitStreetViewEvents();
+	  		  });
+		  }
+		   
 
 		 
 
 		   
 
 
-	    /* websockets */
-	 //   	var connection = new WebSocket('ws://html5rocks.websocket.org/echo', ['soap', 'xmpp']);
-
-	 //   	connection.onopen = function () {
-		//   connection.send('Ping'); // Send the message 'Ping' to the server
-		// };
-
-		// // Log errors
-		// connection.onerror = function (error) {
-		//   console.log('WebSocket Error ' + error);
-		// };
-
-		// // Log messages from the server
-		// connection.onmessage = function (e) {
-		//   console.log('Message from the server: ' + e.data);
-		// };
-
-		// Sending String
+	  
 
 
 
