--- a/demo-2/views/index.html
+++ b/demo-2/views/index.html
@@ -126,8 +126,8 @@
 	      google.maps.event.addDomListener(window, 'load', initialize);
 
 
-		// var socket = io.connect('http://107.21.207.8:8090/');
-		var socket = io.connect('http://localhost');
+		var socket = io.connect('http://107.21.207.8:8090/');
+		// var socket = io.connect('http://localhost');
 		  
 		// map events
 		   socket.on('map_event', function (data) {
